# db_management_app

./: .env.example  .gitignore  LICENSE  README.md  api.py  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  seed.py
.github/workflows/: ci.yml
config/: databases.py  settings.py
db/: __init__.py  bulk_upload.py  delete.py  edit.py  export.py  read.py  schema.py  sql_exec.py  table_cache.py  upload.py  utils.py
misc/: database.txt  plan_of_attack.txt  structure.txt  venv_update.txt
style/: style.css
templates/: browse.html  login.html  operations.html  table_view.html  upload_preview.html
tests/: conftest.py  test_db_integration.py  test_sql_injection_blocked.py  test_validate_identifier.py
ui/: __init__.py
