[project]
name = "db-manager"
version = "1.0.0"
description = "A full-stack PostgreSQL database management tool built with Flask and SQLAlchemy"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: requires a running PostgreSQL instance (LOCAL_DB at port 5433)",
]
